Set up a COBOL convertor for the comp-3 packed decimal format Set up this converter and the cobol engine with some tests, and managed to call a cobol function and read the result correctly
Signed-off-by: Vasea <zzzargoman@gmail.com>